--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sweetdreams",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,6 +10,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "connect-mongodb-session": "^5.0.0",
     "cors": "^2.8.5",
