axios.defaults.baseURL = process.env.VUE_APP_API_URL || 'https://api.sweet-dreams-confectionery.ru';

--- a/vercel.json
+++ b/vercel.json
@@ -13,14 +13,8 @@
     {
       "source": "/api/:path*",
       "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "https://sweet-dreams-confectionery.ru" 
-        },
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        }
+        { "key": "Access-Control-Allow-Origin", "value": "https://sweet-dreams-confectionery.ru" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
       ]
     }
   ]
