--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,7 @@
       "source": "/api/:path*",
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "https://sweet-dreams-confectionery.ru" },
+        { "key": "Access-Control-Allow-Origin", "value": "https://www.sweet-dreams-confectionery.ru" },
         { "key": "Access-Control-Allow-Credentials", "value": "true" }
       ]
     }
