--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "build": "vite build",        
+    "preview": "vite preview",     
+    "vercel-build": "npm run build",
     "start": "nodemon index.js"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.11.0",
     "nodemon": "^3.1.9",
+    "serverless-http": "^3.2.0",
     "vanilla-tilt": "^1.8.1",
     "vue": "^3.4.15",
     "vue-router": "^4.5.1"
@@ -28,7 +30,6 @@
     "vite": "^5.0.11"
   },
   "description": "This template should help get you started developing with Vue 3 in Vite.",
-  "main": "vite.config.js",
   "keywords": [],
   "author": "",
   "license": "ISC"
