--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,24 @@
 {
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/:path*",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://sweet-dreams-confectionery.ru" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" }
-      ]
-    }
-  ]
-}
+    "rewrites": [
+      {
+        "source": "/api/:path*",
+        "destination": "/api/:path*"
+      },
+      {
+        "source": "/(.*)",
+        "destination": "/index.html"
+      }
+    ],
+    "headers": [
+      {
+        "source": "/api/:path*",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin",  "value": "https://sweet-dreams-confectionery.ru" },
+          { "key": "Access-Control-Allow-Credentials","value": "true" },
+          { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,POST,PUT,PATCH,DELETE" },
+          { "key": "Access-Control-Allow-Headers","value": "Content-Type,Authorization" }
+        ]
+      }
+    ]
+  }
+  
