--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "rewrites": [
       {
         "source": "/api/:path*",
@@ -13,12 +14,13 @@
       {
         "source": "/api/:path*",
         "headers": [
-          { "key": "Access-Control-Allow-Origin",  "value": "https://sweet-dreams-confectionery.ru" },
-          { "key": "Access-Control-Allow-Credentials","value": "true" },
+          { "key": "Access-Control-Allow-Origin", "value": "https://sweet-dreams-confectionery.ru" },
+          { "key": "Access-Control-Allow-Credentials", "value": "true" },
           { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,POST,PUT,PATCH,DELETE" },
-          { "key": "Access-Control-Allow-Headers","value": "Content-Type,Authorization" }
+          { "key": "Access-Control-Allow-Headers", "value": "Content-Type,Authorization" }
         ]
       }
     ]
   }
+  
   
