--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "https://openapi.vercel.sh/vercel.json",
     "version": 2,
     "rewrites": [
       {
@@ -6,7 +7,7 @@
         "destination": "/api/:path*"
       },
       {
-        "source": "/(.*)",
+        "source": "/((?!api/.*).*)",
         "destination": "/index.html"
       }
     ],
