--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",        
-    "preview": "vite preview",     
+    "build": "vite build",
+    "preview": "vite preview",
     "vercel-build": "npm run build",
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "@vercel/node": "^5.3.0",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "connect-mongodb-session": "^5.0.0",
