--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,19 @@
+
 {
-    "$schema": "https://openapi.vercel.sh/vercel.json",
-    "version": 2,
-    "rewrites": [
-      {
-        "source": "/api/:path*",
-        "destination": "/api/:path*"
-      },
-      {
-        "source": "/((?!api/.*).*)",
-        "destination": "/index.html"
-      }
-    ],
-    "headers": [
-      {
-        "source": "/api/:path*",
-        "headers": [
-          { "key": "Access-Control-Allow-Origin", "value": "https://sweet-dreams-confectionery.ru" },
-          { "key": "Access-Control-Allow-Credentials", "value": "true" },
-          { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,POST,PUT,PATCH,DELETE" },
-          { "key": "Access-Control-Allow-Headers", "value": "Content-Type,Authorization" }
-        ]
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
+}
+
   
   
