--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
   "routes": [
     {
       "src": "/(.*)",
+      "dest": "index.html"
+    },
+    {
+      "src": "/(.*)",
       "dest": "index.js"
     }
   ]
