--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "vercel-build": "npm run build",
-    "start": "nodemon index.js"
+    "start": "nodemon api/index.js"
   },
   "dependencies": {
     "@vercel/node": "^5.3.0",
