--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,25 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "client/vite.config.js",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "client/dist"
+      }
+    },
+    {
+      "src": "api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "index.js"
+      "dest": "client/dist/$1"
     }
   ]
 }
