--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,13 @@
   "version": 2,
   "builds": [
     {
-      "src": "client/vite.config.js",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "client/dist"
-      }
-    },
-    {
       "src": "api/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
