--- a/vercel.json
+++ b/vercel.json
@@ -8,18 +8,17 @@
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "api/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "client/dist/$1"
-    }
+
+    { "src": "/api/(.*)", "dest": "api/index.js" },
+
+    { "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|woff2?|ico))", "dest": "client/dist/$1" },
+
+    { "src": "/(.*)", "dest": "client/dist/index.html" }
   ]
 }
-  
