--- a/vercel.json
+++ b/vercel.json
@@ -6,19 +6,25 @@
       "use": "@vercel/node"
     },
     {
-      "src": "client/package.json",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "client/dist"
       }
     }
   ],
   "routes": [
-
-    { "src": "/api/(.*)", "dest": "api/index.js" },
-
-    { "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|woff2?|ico))", "dest": "client/dist/$1" },
-
-    { "src": "/(.*)", "dest": "client/dist/index.html" }
+    {
+      "src": "/api/(.*)",
+      "dest": "api/index.js"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|woff2?|ico))",
+      "dest": "client/dist/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "client/dist/index.html"
+    }
   ]
 }
