--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,12 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "client/dist"
-      }
-    }
+    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "client/dist" } }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "api/index.js"
-    },
-    {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|woff2?|ico))",
-      "dest": "client/dist/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "client/dist/index.html"
-    }
+    { "src": "/api/(.*)", "dest": "api/index.js" },
+    { "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|woff2?|ico))", "dest": "client/dist/$1" },
+    { "src": "/(.*)", "dest": "client/dist/index.html" }
   ]
 }
