--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,8 @@
     { "src": "/api/(.*)", "dest": "api/index.js" },
     { "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|woff2?|ico))", "dest": "client/dist/$1" },
     { "src": "/(.*)", "dest": "client/dist/index.html" }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/client/dist/index.html" }
   ]
 }
