--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,17 @@
     { "src": "/api/(.*)", "dest": "api/index.js" },
     { "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|woff2?|ico))$", "dest": "/$1" },
     { "src": "/(.*)", "dest": "/index.html" }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "https://sweet-dreams-confectionery.ru" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, PATCH, DELETE, OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
+    }
   ]
 }
 
